--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,56 +1,60 @@
 
 <div id="appContainer">
-
+  <div id="appTable">
     <p-table>
       <ng-template pTemplate="header">
-          <tr>
-              <th>Размер</th>
-              <th *ngFor="let size of this.data.header">{{ size }}</th>
-          </tr>
-          <tr id="inpVal">
-            <th>Вес нетто</th>
-            <th *ngFor="let val of this.data.header; let i = index" >
-              <p-inputNumber pTooltip="Введенное значение должно быть больше предыдущего"
-                             tooltipPosition="top"
-                             tooltipStyleClass="tooltip"
-                             [tooltipDisabled]="toolEnable[i]"
-                             (onInput)="checkVal()"
-                             [disabled] = "editItem"
-                             [(ngModel)]="this.testArr[i]"
-                              >
-              </p-inputNumber>
-              <button class="pi pi-times"
-                        (click)="deleteVal(i)"
-                        [hidden]="editItem">
-              </button>
-            </th>
-          </tr>
+        <tr id="sizes">
+          <td>Размер</td>
+          <td *ngFor="let size of this.data.header">{{ size }}</td>
+        </tr>
+        <tr id="values">
+          <td>Вес нетто</td>
+          <td *ngFor="let val of this.data.netWeightValues;
+              let i = index" id="head"
+          >
+<!--            <p-inputNumber pTooltip="Вес каждого последующего размера должен быть больше предыдущего!"-->
+<!--                           tooltipPosition="top"-->
+<!--                           [tooltipDisabled]="toolEnable[i]"-->
+<!--                           [disabled] = "editItem"-->
+<!--                           [(ngModel)]="this.data.netWeightValues[i]"-->
+<!--                           (onInput)="checkVal(i)"-->
+<!--                           [class.ng-invalid]="toolInvalid[i]"-->
+
+<!--            >-->
+<!--            </p-inputNumber>-->
+            <input type="number"
+                    class="btn"
+                    [(ngModel)]="this.data.netWeightValues[i]"
+                    [pTooltip]=""
+                    [tooltipDisabled]="toolEnable[i]"
+                    [disabled]="editItem"
+                    [class.ng-invalid]="toolInvalid[i]"
+            >
+
+            <button class="pi pi-times"
+                    (click)="deleteVal(i)"
+                    [hidden]="editItem"
+            >
+            </button>
+          </td>
+        </tr>
       </ng-template>
     </p-table>
+  </div>
 
-    <div *ngIf="editItem;else Db">
+  <div class="butt">
+    <div *ngIf="editItem;else edit">
       <p-button (click)="editMode()"
                 label="Редактирование">
       </p-button>
     </div>
-
-    <ng-template  #Db>
-      <app-dialog></app-dialog>
-      <p-button (click)="saveVal()"
-                label="Сохранить">
-      </p-button>
-    </ng-template>
-
+  <ng-template  #edit>
+    <app-dialog></app-dialog>
+    <p-button (click)="saveVal()"
+              label="Сохранить"
+              [disabled]="saveBtn">
+    </p-button>
+  </ng-template>
   </div>
 
-  <div *ngFor="let val of this.data.netWeightValues">
-    <h1>Нормальный</h1>
-    <input type="reset" [value]="val" >
-  </div>
-  <br>
-  <h1>Тестовый</h1>
-
-  <div *ngFor="let val of this.testArr">
-    <input type="text" [value]="val" pButton>
-  </div>
-
+</div>
